[gd_scene load_steps=4 format=2]

[ext_resource path="res://Effects/HyperspaceEffect.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "title_bg_anim"
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.156863, 0, 0, 1 ), Color( 0, 0.0588235, 0, 1 ), Color( 0.117647, 0.00392157, 0.117647, 1 ), Color( 0, 0, 0.156863, 1 ), Color( 0.156863, 0, 0, 1 ) ]
}

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Hyperspace" type="Node2D"]
script = ExtResource( 1 )
autostart = true

[node name="bg" type="ColorRect" parent="."]
margin_left = -14.7063
margin_top = -11.5369
margin_right = 25.2937
margin_bottom = 28.4631
rect_scale = Vector2( 26.2734, 15.4837 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bganim" type="AnimationPlayer" parent="bg"]
method_call_mode = 1
anims/title_bg_anim = SubResource( 1 )

[node name="cpu1" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 124
lifetime = 16.0
preprocess = 16.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.2
scale_amount_random = 0.2
color_ramp = SubResource( 2 )

[node name="cpu2" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 32
lifetime = 16.0
preprocess = 16.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
scale_amount = 2.5
scale_amount_random = 0.2
color_ramp = SubResource( 2 )

[node name="cpu3" type="CPUParticles2D" parent="."]
position = Vector2( 1048.81, 302.658 )
rotation = -3.14159
amount = 32
lifetime = 16.0
preprocess = 16.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
scale_amount = 3.0
scale_amount_random = 0.2
color_ramp = SubResource( 2 )

[node name="cpuPink" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 24
lifetime = 12.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 1, 0.27451, 0.921569, 1 )

[node name="cpuBlue" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 24
lifetime = 12.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.27451, 0.439216, 1, 1 )

[node name="cpuGreen" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 24
lifetime = 12.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.219608, 0.803922, 0.227451, 1 )

[node name="cpuRed" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 24
lifetime = 12.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.94902, 0.239216, 0.168627, 1 )

[node name="cpuYellow" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 24
lifetime = 12.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.956863, 0.898039, 0.419608, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="DebugActivate" type="Button" parent="."]
visible = false
margin_left = 35.9188
margin_top = 40.4086
margin_right = 178.919
margin_bottom = 60.4086
text = "Activate Hyperspace"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
[connection signal="button_up" from="DebugActivate" to="." method="_on_DebugActivate_button_up"]
